--- a/pom.xml
+++ b/pom.xml
@@ -249,14 +249,12 @@
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-config</artifactId>
         <version>2.5.0-b05</version> <!-- última versión compatible con Java 8 -->
-
-        <!--    TODO REVISAR EXCLUSION    -->
-        <!--        <exclusions>-->
-        <!--          <exclusion>-->
-        <!--            <groupId>org.glassfish.hk2.external</groupId>-->
-        <!--            <artifactId>bean-validator</artifactId>-->
-        <!--          </exclusion>-->
-        <!--        </exclusions>-->
+        <exclusions>
+          <exclusion>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>bean-validator</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jersey.core</groupId>
@@ -269,19 +267,25 @@
           </exclusion>
         </exclusions>
       </dependency>
-
-      <!--      TODO REVISAR   -->
-      <!--      <dependency>-->
-      <!--        <groupId>org.glassfish.jersey.ext</groupId>-->
-      <!--        <artifactId>jersey-bean-validation</artifactId>-->
-      <!--        <version>${jersey.version}</version>-->
-      <!--        <exclusions>-->
-      <!--          <exclusion>-->
-      <!--            <groupId>org.jboss.logging</groupId>-->
-      <!--            <artifactId>jboss-logging</artifactId>-->
-      <!--          </exclusion>-->
-      <!--        </exclusions>-->
-      <!--      </dependency>-->
+      <dependency>
+        <groupId>org.glassfish.jersey.ext</groupId>
+        <artifactId>jersey-bean-validation</artifactId>
+        <version>${jersey.version}</version>
+<!--        <exclusions>-->
+<!--          <exclusion>-->
+<!--            <groupId>javax.validation</groupId>-->
+<!--            <artifactId>validation-api</artifactId>-->
+<!--          </exclusion>-->
+<!--          <exclusion>-->
+<!--            <groupId>org.hibernate</groupId>-->
+<!--            <artifactId>hibernate-validator</artifactId>-->
+<!--          </exclusion>-->
+<!--          <exclusion>-->
+<!--            <groupId>org.jboss.logging</groupId>-->
+<!--            <artifactId>jboss-logging</artifactId>-->
+<!--          </exclusion>-->
+<!--        </exclusions>-->
+      </dependency>
 
       <!--JERSEY JSON -->
       <dependency>
