--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -152,13 +152,10 @@
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-server</artifactId>
     </dependency>
-
-    <!--    TODO: ver si es necesario   -->
-    <!--    <dependency>-->
-    <!--      <groupId>org.glassfish.jersey.ext</groupId>-->
-    <!--      <artifactId>jersey-bean-validation</artifactId>-->
-    <!--    </dependency>-->
-
+    <dependency>
+      <groupId>org.glassfish.jersey.ext</groupId>
+      <artifactId>jersey-bean-validation</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-moxy</artifactId>
