--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -11,8 +11,10 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>ar.edu.itba.paw.webapp.config.WebConfig,
-      ar.edu.itba.paw.webapp.config.WebAuthConfig</param-value>
+    <param-value>
+      ar.edu.itba.paw.webapp.config.WebConfig,
+      ar.edu.itba.paw.webapp.config.WebAuthConfig
+    </param-value>
   </context-param>
 
   <listener>
@@ -24,7 +26,10 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
     <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>ar.edu.itba.paw.webapp.controller</param-value>
+      <param-value>
+        ar.edu.itba.paw.webapp.controller,
+        ar.edu.itba.paw.webapp.mapper
+      </param-value>
     </init-param>
     <!-- pass to next filter if Jersey/App returns 404 -->
     <init-param>
@@ -33,16 +38,11 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     </init-param>
   </filter>
 
-  <filter-mapping>
-    <filter-name>jersey</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-
-
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
   </filter>
+
   <filter-mapping>
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
@@ -52,10 +52,15 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <filter-name>openEntityManagerInView</filter-name>
     <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
   </filter>
+
   <filter-mapping>
     <filter-name>openEntityManagerInView</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <filter-mapping>
+    <filter-name>jersey</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
 </web-app>
