--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,12 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
       <param-name>jersey.config.servlet.filter.forwardOn404</param-name>
       <param-value>true</param-value>
     </init-param>
+
+    <init-param>
+      <param-name>jersey.config.server.provider.classnames</param-name>
+      <param-value>org.glassfish.jersey.media.multipart.MultiPartFeature</param-value>
+    </init-param>
+
   </filter>
 
   <filter>
@@ -62,5 +68,6 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <filter-name>jersey</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
 
 </web-app>
