--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   </filter>
   <filter-mapping>
     <filter-name>springSecurityFilterChain</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </filter-mapping>
 
   <filter>
@@ -37,7 +37,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   </filter>
   <filter-mapping>
     <filter-name>openEntityManagerInView</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </filter-mapping>
 
   <filter>
@@ -54,13 +54,14 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   </filter>
   <filter-mapping>
     <filter-name>encoding-filter</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </filter-mapping>
 
 
-  <filter>
-    <filter-name>jersey</filter-name>
-    <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
+  <servlet>
+    <servlet-name>jersey-servlet</servlet-name>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+
     <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
       <param-value>
@@ -71,8 +72,6 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     </init-param>
     <!-- pass to next filter if Jersey/App returns 404 -->
     <init-param>
-<!--      Cambiar estas lineas hace que te muestre el error en el reply que es un espanto-->
-<!--      <param-name>jersey.config.servlet.filter.forwardOn404</param-name>-->
       <param-name>jersey.config.server.response.setStatusOverSendError</param-name>
       <param-value>true</param-value>
     </init-param>
@@ -81,24 +80,57 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
       <param-name>jersey.config.server.provider.classnames</param-name>
       <param-value>org.glassfish.jersey.media.multipart.MultiPartFeature</param-value>
     </init-param>
-  </filter>
 
-  <filter-mapping>
-    <filter-name>jersey</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>jersey-servlet</servlet-name>
+    <url-pattern>/api/*</url-pattern>
+  </servlet-mapping>
 
   <filter>
     <filter-name>StaticCacheFilter</filter-name>
     <filter-class>ar.edu.itba.paw.webapp.config.StaticCacheFilter</filter-class>
   </filter>
 
-<!--  apuntar esto a mi front -->
   <filter-mapping>
     <filter-name>StaticCacheFilter</filter-name>
     <url-pattern>/static/*</url-pattern>
   </filter-mapping>
 
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>/static/*</url-pattern>
+  </servlet-mapping>
 
+  <servlet>
+    <servlet-name>index</servlet-name>
+    <jsp-file>/index.html</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>index</servlet-name>
+    <url-pattern>/*</url-pattern>
+  </servlet-mapping>
+
+  <mime-mapping>
+    <extension>ico</extension>
+    <mime-type>image/x-icon</mime-type>
+  </mime-mapping>
+
+  <mime-mapping>
+    <extension>png</extension>
+    <mime-type>image/png</mime-type>
+  </mime-mapping>
+
+  <mime-mapping>
+    <extension>jpeg</extension>
+    <mime-type>image/jpeg</mime-type>
+  </mime-mapping>
+
+  <mime-mapping>
+    <extension>jpg</extension>
+    <mime-type>image/jpeg</mime-type>
+  </mime-mapping>
 
 </web-app>
