--- a/Front/package.json
+++ b/Front/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "react-scripts test --transformIgnorePatterns \"/node_modules/(?!@web3-storage|react-copy-to-clipboard).+(js|jsx)$\""
   },
+
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.11.3",
@@ -22,6 +25,7 @@
     "react-router-dom": "^6.20.0",
     "sass": "^1.69.5"
   },
+
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
