--- a/Front/package.json
+++ b/Front/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,7 +10,6 @@
     "preview": "vite preview",
     "test": "react-scripts test --transformIgnorePatterns \"/node_modules/(?!@web3-storage|react-copy-to-clipboard).+(js|jsx)$\""
   },
-
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.11.3",
@@ -25,8 +23,10 @@
     "react-router-dom": "^6.20.0",
     "sass": "^1.69.5"
   },
-
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.1",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -35,6 +35,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "jest": "^29.7.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
