--- a/Front/package.json
+++ b/Front/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "jest": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
